--- a/deps/style.html
+++ b/deps/style.html
@@ -37,6 +37,9 @@ nav#TOC ul {
 p:not(.title, .author, .date) {
     text-align: justify;
 }
+.footnotes p {
+    text-align: left;
+}
 div.keywords .k-title {
     font-weight: bold;
     margin-right: .13rem;
