deploy: b8669a156d6399c2a37fdf7f34bf83ec7bfa7cc0

--- a/01-intro.html
+++ b/01-intro.html
@@ -251,6 +251,9 @@ nav#TOC ul {
 p:not(.title, .author, .date) {
     text-align: justify;
 }
+.footnotes p {
+    text-align: left;
+}
 div.keywords .k-title {
     font-weight: bold;
     margin-right: .13rem;
