--- a/index.html
+++ b/index.html
@@ -191,6 +191,9 @@
         p:not(.title, .author, .date) {
             text-align: justify;
         }
+        .footnotes p {
+            text-align: left;
+        }
         div.keywords .k-title {
             font-weight: bold;
             margin-right: .13rem;
