--- a/deps/after-body.html
+++ b/deps/after-body.html
@@ -5,7 +5,7 @@
     // Insert title for references
     let ref = document.querySelector("#refs");
     if (ref != null) {
-        let title = document.createElement("h1");
+        let title = document.createElement("h2");
         title.innerText = "References";
         title.className = "unnumbered";
         title.id = "chapter-references";
@@ -18,7 +18,7 @@
         // Where to grab the headings to build the table of contents.
         contentSelector: 'body',
         // Which headings to grab inside of the contentSelector element.
-        headingSelector: 'h1, h2, h3',
+        headingSelector: 'h2',
         ignoreSelector: 'h1.title',
         collapseDepth: '6',
         // // For headings inside relative or absolute positioned containers within content.
@@ -26,9 +26,27 @@
     });
 </script>
 
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.11.1/tocbot.css">
 <style>
-    @media only screen and (max-width: 1000px) {
+    .js-toc {
+        font-size: 0.85em;
+        position: fixed;
+        right: 0;
+        top: 0;
+        margin-top: 50px;
+        margin-right: 0;
+        width: 20%;
+        min-width: 200px;
+    }
+    .toc-list > li {
+        padding: 0.35em 0;
+        margin: 0;
+        
+    }
+    .toc-list > li a {
+        text-decoration: none;
+    }
+    @media only screen and (max-width: 1050px) {
         .js-toc,
         #tocChap ul {
             display: none !important;
