--- a/02-pandocSyntax.html
+++ b/02-pandocSyntax.html
@@ -894,7 +894,7 @@ Stanford, J. (2008). Child dialect acquisition: <span>New</span> perspectives on
         // Where to grab the headings to build the table of contents.
         contentSelector: 'body',
         // Which headings to grab inside of the contentSelector element.
-        headingSelector: 'h2',
+        headingSelector: 'h2, h3',
         ignoreSelector: 'h1.title',
         collapseDepth: '6',
         // // For headings inside relative or absolute positioned containers within content.
