--- a/appendix-A.html
+++ b/appendix-A.html
@@ -479,7 +479,7 @@ div.output {
         // Where to grab the headings to build the table of contents.
         contentSelector: 'body',
         // Which headings to grab inside of the contentSelector element.
-        headingSelector: 'h2',
+        headingSelector: 'h2, h3',
         ignoreSelector: 'h1.title',
         collapseDepth: '6',
         // // For headings inside relative or absolute positioned containers within content.
