--- a/02-pandocSyntax.html
+++ b/02-pandocSyntax.html
@@ -1018,6 +1018,9 @@ Stanford, J. (2008). Child dialect acquisition: <span>New</span> perspectives on
     .unnumbered::before {
       display: none;
     }
+    .appendix.unnumbered::before {
+      display: block;
+    }
 
     /* Heading styles */
     h1, h2 {
